syntax = "proto3";

package auth;

option go_package = "auth-service/internal/proto;proto";

service AuthService {
  rpc RegisterUser (RegisterRequest) returns (AuthResponse);
  rpc LoginUser (LoginRequest) returns (AuthResponse);
  rpc GetMyProfile (GetMyProfileRequest) returns (UserProfile);
  rpc UpdateMyProfile (UpdateProfileRequest) returns (UserProfile);
}

message RegisterRequest {
  string email = 1;
  string password = 2;
  string full_name = 3;
  string house = 4;
  string street = 5;
  string apartment = 6;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message GetMyProfileRequest {
  string token = 1;
}

message UpdateProfileRequest {
  string token = 1;
  string full_name = 2;
  string house = 3;
  string street = 4;
  string apartment = 5;
}

message AuthResponse {
  string token = 1;
}

message UserProfile {
  string email = 1;
  string full_name = 2;
  string role = 3;
  string house = 4;
  string street = 5;
  string apartment = 6;
}
