package handler

import (
	"api-gateway-service/config"
	pb "api-gateway-service/proto"
	"context"
	"encoding/json"
	"net/http"

	"google.golang.org/grpc/metadata"
)

type AuthHandler struct {
	Client pb.AuthServiceClient
	Cfg    *config.Config
}

// üî• –î–û–ë–ê–í–õ–ï–ù–û: —Ñ—É–Ω–∫—Ü–∏—è –¥–ª—è –ø–µ—Ä–µ–¥–∞—á–∏ —Ç–æ–∫–µ–Ω–∞ –≤ gRPC metadata
func forwardAuthToken(r *http.Request, ctx context.Context) context.Context {
	authHeader := r.Header.Get("Authorization")
	if authHeader != "" {
		// –ü–µ—Ä–µ–¥–∞–µ–º —Ç–æ–∫–µ–Ω –≤ gRPC metadata
		md := metadata.Pairs("authorization", authHeader)
		ctx = metadata.NewOutgoingContext(ctx, md)
	}
	return ctx
}

func (h *AuthHandler) Register(w http.ResponseWriter, r *http.Request) {
	var req pb.RegisterRequest
	json.NewDecoder(r.Body).Decode(&req)

	resp, err := h.Client.RegisterUser(context.Background(), &req)
	if err != nil {
		http.Error(w, err.Error(), http.StatusInternalServerError)
		return
	}

	json.NewEncoder(w).Encode(resp)
}

func (h *AuthHandler) Login(w http.ResponseWriter, r *http.Request) {
	var req pb.LoginRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		http.Error(w, err.Error(), http.StatusBadRequest)
		return
	}

	res, err := h.Client.LoginUser(context.Background(), &req)
	if err != nil {
		http.Error(w, err.Error(), http.StatusUnauthorized)
		return
	}

	w.Header().Set("Content-Type", "application/json")
	w.WriteHeader(http.StatusOK)

	json.NewEncoder(w).Encode(map[string]string{
		"token": res.Token,
	})
}

// üî• –ò–°–ü–†–ê–í–õ–ï–ù–û: GetProfile —Å –ø–µ—Ä–µ–¥–∞—á–µ–π —Ç–æ–∫–µ–Ω–∞ —á–µ—Ä–µ–∑ metadata
func (h *AuthHandler) GetProfile(w http.ResponseWriter, r *http.Request) {
	ctx := context.Background()

	// –ü–µ—Ä–µ–¥–∞–µ–º —Ç–æ–∫–µ–Ω –≤ gRPC metadata
	ctx = forwardAuthToken(r, ctx)

	resp, err := h.Client.GetMyProfile(ctx, &pb.GetMyProfileRequest{})
	if err != nil {
		http.Error(w, err.Error(), http.StatusUnauthorized)
		return
	}
	json.NewEncoder(w).Encode(resp)
}

// üî• –ò–°–ü–†–ê–í–õ–ï–ù–û: UpdateProfile —Å –ø–µ—Ä–µ–¥–∞—á–µ–π —Ç–æ–∫–µ–Ω–∞ —á–µ—Ä–µ–∑ metadata
func (h *AuthHandler) UpdateProfile(w http.ResponseWriter, r *http.Request) {
	ctx := context.Background()

	// –ü–µ—Ä–µ–¥–∞–µ–º —Ç–æ–∫–µ–Ω –≤ gRPC metadata
	ctx = forwardAuthToken(r, ctx)

	var req pb.UpdateProfileRequest
	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
		http.Error(w, err.Error(), http.StatusBadRequest)
		return
	}

	// –£–±–∏—Ä–∞–µ–º Token –∏–∑ request, —Ç–∞–∫ –∫–∞–∫ –æ–Ω —Ç–µ–ø–µ—Ä—å –≤ metadata
	res, err := h.Client.UpdateMyProfile(ctx, &req)
	if err != nil {
		http.Error(w, err.Error(), http.StatusInternalServerError)
		return
	}

	json.NewEncoder(w).Encode(res)
}
