package delivery

import (
	"context"
	"errors"
	"fmt"

	"auth-service/config"
	"auth-service/internal/domain"
	"auth-service/internal/usecase"
	pb "auth-service/proto"

	"google.golang.org/grpc/codes"
	"google.golang.org/grpc/status"
)

type Handler struct {
	pb.UnimplementedAuthServiceServer
	Usecase *usecase.AuthUsecase
	Cfg     *config.Config
}

// üî• –î–û–ë–ê–í–õ–ï–ù–û: —Ñ—É–Ω–∫—Ü–∏–∏ –¥–ª—è –∏–∑–≤–ª–µ—á–µ–Ω–∏—è –¥–∞–Ω–Ω—ã—Ö –∏–∑ –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞
func getEmailFromContext(ctx context.Context) (string, error) {
	email, ok := ctx.Value("email").(string)
	if !ok || email == "" {
		return "", errors.New("email not found in context")
	}
	return email, nil
}

func getRoleFromContext(ctx context.Context) (string, error) {
	role, ok := ctx.Value("role").(string)
	if !ok || role == "" {
		return "", errors.New("role not found in context")
	}
	return role, nil
}

func (h *Handler) RegisterUser(ctx context.Context, req *pb.RegisterRequest) (*pb.AuthResponse, error) {
	fmt.Println("[RegisterUser] request:", req)
	user := &domain.User{
		Email:     req.Email,
		Password:  req.Password,
		FullName:  req.FullName,
		House:     req.House,
		Street:    req.Street,
		Apartment: req.Apartment,
	}

	token, err := h.Usecase.Register(ctx, user)
	if err != nil {
		fmt.Println("[RegisterUser] error:", err)
		return nil, err
	}
	fmt.Println("[RegisterUser] token:", token)

	return &pb.AuthResponse{Token: token}, nil
}

func (h *Handler) LoginUser(ctx context.Context, req *pb.LoginRequest) (*pb.AuthResponse, error) {
	fmt.Println("[LoginUser] request: email =", req.Email, "password =", req.Password)

	token, err := h.Usecase.Login(ctx, req.Email, req.Password)
	if err != nil {
		fmt.Println("[LoginUser] error:", err)
		return nil, err
	}
	fmt.Println("[LoginUser] token:", token)

	return &pb.AuthResponse{Token: token}, nil
}

// üî• –ò–°–ü–†–ê–í–õ–ï–ù–û: GetMyProfile —Ç–µ–ø–µ—Ä—å –∏—Å–ø–æ–ª—å–∑—É–µ—Ç email –∏–∑ –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞
func (h *Handler) GetMyProfile(ctx context.Context, req *pb.GetMyProfileRequest) (*pb.UserProfile, error) {
	// –ü–æ–ª—É—á–∞–µ–º email –∏–∑ –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞ (—Ç–æ–∫–µ–Ω —É–∂–µ –ø—Ä–æ–≤–µ—Ä–µ–Ω –≤ interceptor)
	email, err := getEmailFromContext(ctx)
	if err != nil {
		return nil, status.Errorf(codes.Unauthenticated, "unauthorized: %v", err)
	}

	role, err := getRoleFromContext(ctx)
	if err != nil {
		return nil, status.Errorf(codes.Unauthenticated, "unauthorized: %v", err)
	}

	fmt.Println("[GetMyProfile] email from context:", email, "role:", role)

	user, err := h.Usecase.GetProfile(ctx, email)
	if err != nil {
		fmt.Println("[GetMyProfile] error:", err)
		return nil, err
	}

	return &pb.UserProfile{
		Email:     user.Email,
		FullName:  user.FullName,
		Role:      role,
		House:     user.House,
		Street:    user.Street,
		Apartment: user.Apartment,
	}, nil
}

// üî• –ò–°–ü–†–ê–í–õ–ï–ù–û: UpdateMyProfile —Ç–µ–ø–µ—Ä—å –∏—Å–ø–æ–ª—å–∑—É–µ—Ç email –∏–∑ –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞
func (h *Handler) UpdateMyProfile(ctx context.Context, req *pb.UpdateProfileRequest) (*pb.UserProfile, error) {
	fmt.Println("[UpdateMyProfile] request:", req)

	// –ü–æ–ª—É—á–∞–µ–º email –∏–∑ –∫–æ–Ω—Ç–µ–∫—Å—Ç–∞ (—Ç–æ–∫–µ–Ω —É–∂–µ –ø—Ä–æ–≤–µ—Ä–µ–Ω –≤ interceptor)
	email, err := getEmailFromContext(ctx)
	if err != nil {
		return nil, status.Errorf(codes.Unauthenticated, "unauthorized: %v", err)
	}

	role, err := getRoleFromContext(ctx)
	if err != nil {
		return nil, status.Errorf(codes.Unauthenticated, "unauthorized: %v", err)
	}

	fmt.Println("[UpdateMyProfile] email from context:", email)

	updated := &domain.User{
		FullName:  req.FullName,
		House:     req.House,
		Street:    req.Street,
		Apartment: req.Apartment,
	}

	user, err := h.Usecase.UpdateProfile(ctx, email, updated)
	if err != nil {
		fmt.Println("[UpdateMyProfile] error:", err)
		return nil, err
	}

	return &pb.UserProfile{
		Email:     user.Email,
		FullName:  user.FullName,
		Role:      role,
		House:     user.House,
		Street:    user.Street,
		Apartment: user.Apartment,
	}, nil
}